--- a/package.json
+++ b/package.json
@@ -9,31 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@heroicons/react": "^2.2.0",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
-    "chart.js": "^4.4.8",
-    "date-fns": "^4.1.0",
-    "next": "15.3.0",
-    "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
-    "recharts": "^2.15.2",
-    "zustand": "^5.0.3"
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/sortable": "10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
+    "@heroicons/react": "2.2.0",
+    "@supabase/ssr": "0.5.1",
+    "@supabase/supabase-js": "2.49.4",
+    "date-fns": "4.1.0",
+    "geist": "^1.3.1",
+    "next": "14.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "recharts": "2.15.2",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.0",
-    "supabase": "^2.20.12",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.4",
+    "supabase": "2.20.12",
+    "tailwindcss": "3.4.14",
+    "typescript": "5.4.5"
   }
 }
