--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/ssr": "0.5.1",
     "@supabase/supabase-js": "2.49.4",
     "date-fns": "4.1.0",
+    "date-fns-tz": "^3.2.0",
     "geist": "^1.3.1",
     "next": "14.2.4",
     "react": "18.2.0",
